--- a/GaussianElimination/OddEvenSort/OddEvenSort.vcxproj
+++ b/GaussianElimination/OddEvenSort/OddEvenSort.vcxproj
@@ -88,6 +88,7 @@ copy "$(CudaToolkitBinDir)\cudart*.dll" "$(OutDir)"</Command>
     </CudaCompile>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <CudaCompile Include="src\GaussianMulti.cu" />
     <CudaCompile Include="src\Gaussian.cu" />
     <CudaCompile Include="src\CudaFuncs.cu" />
     <CudaCompile Include="src\GaussianDevice.cu" />
@@ -99,6 +100,7 @@ copy "$(CudaToolkitBinDir)\cudart*.dll" "$(OutDir)"</Command>
     <ClInclude Include="include\Log.h" />
     <ClInclude Include="include\RandomGenerator.h" />
     <ClInclude Include="include\GaussianDevice.h" />
+    <ClInclude Include="include\GaussianMulti.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="src\GaussianSingle.cpp" />
